syntax = "proto3";
package worker_service;

message DoWorkRequest {
	string parent_address = 1;
	fixed64 parent_lifetime_id = 2;
	fixed64 parent_task_id = 3;

	fixed64 request_id = 4;

	string fn_name = 5;
	bytes args = 6;
}

message DoWorkResponse {
	string address = 1;
	fixed64 lifetime_id = 2;
	fixed64 task_id = 3;
	fixed64 object_id = 4;
}

service WorkerService {
	rpc DoWork(DoWorkRequest) returns (DoWorkResponse);
}
